@@ -1,10 +1,10 @@
 /*
 
-This software is OSI Certified Open Source Software.
-OSI Certified is a certification mark of the Open Source Initiative.
+ This software is OSI Certified Open Source Software.
+ OSI Certified is a certification mark of the Open Source Initiative.
 
-The license (Mozilla version 1.0) can be read at the MMBase site.
-See http://www.MMBase.org/license
+ The license (Mozilla version 1.0) can be read at the MMBase site.
+ See http://www.MMBase.org/license
 
  */
 
@@ -27,20 +27,17 @@ import org.mmbase.storage.search.*;
 
 import org.mmbase.util.FileWatcher;
 
-
 /**
- * forumManager
- * ToDo: Write docs!
- *
+ * forumManager ToDo: Write docs!
+ * 
  * @author Daniel Ockeloen (MMBased)
- * @version $Id: ForumManager.java,v 1.35 2007-01-16 18:01:57 michiel Exp $
  */
 public class ForumManager {
-    private static final Logger log = Logging.getLoggerInstance(ForumManager.class);
+    private static Logger log = Logging.getLoggerInstance(ForumManager.class);
 
-    private static Map<Integer, Forum> forums = new Hashtable<Integer, Forum>(); // ConcurrentHashMap?
-    private static Map<String, Integer> forumNameCache = new Hashtable<String, Integer>(); // ConcurrentHashMap
-    private static ForumMMBaseSyncer syncfast,syncslow;
+    private static Hashtable forums = new Hashtable(); // ConcurrentHashMap?
+    private static Hashtable forumnamecache = new Hashtable(); // ConcurrentHashMap
+    private static ForumMMBaseSyncer syncfast, syncslow;
     private static ForumSwapManager swapmanager;
     private static ExternalProfilesManager externalprofilesmanager;
     private static ForumEmailSender emailsender;
@@ -60,8 +57,7 @@ public class ForumManager {
     public static final String PUBLIC_ID_MMBOBCONFIG_1_0 = "-//MMBase//DTD mmbob config 1.0//EN";
 
     /**
-     * Register the Public Ids for DTDs used by DatabaseReader
-     * This method is called by XMLEntityResolver.
+     * Register the Public Ids for DTDs used by DatabaseReader This method is called by XMLEntityResolver.
      */
     public static void registerPublicIDs() {
         XMLEntityResolver.registerPublicID(PUBLIC_ID_MMBOBCONFIG_1_0, DTD_MMBOBCONFIG_1_0, ForumManager.class);
@@ -73,54 +69,36 @@ public class ForumManager {
     private static Cloud cloud;
 
     /**
-     *  Initialization
+     * Initialization
      */
     public static synchronized void init() {
-	if (!running) {
+        if (!running) {
             readConfig();
             cloud = getCloud();
-            if (! running) {
+            if (!running) {
                 forumnodemanager = cloud.getNodeManager("forums");
                 if (forumnodemanager == null) {
                     log.error("Can't load forums nodemanager from mmbase");
                 }
 
-                externalprofilesmanager =  new ExternalProfilesManager(1 * 60 * 1000);
+                externalprofilesmanager = new ExternalProfilesManager(1 * 60 * 1000);
 
                 readForums();
 
                 // start the mmbase syncer
-                //was 10 * 1000
-                DocumentReader reader = config.getReader();
-                Element element = config.getElement();
-
-                for (Element syncerElement : ForumsConfig.list(reader.getChildElements(element, "syncer"))) {
-                    String type = syncerElement.getAttribute("type");
-                    if ("slow".equals(type)) {
-                        syncslow = new ForumMMBaseSyncer(Integer.parseInt(syncerElement.getAttribute("sleepTime")), 50,
-                                                         Integer.parseInt(syncerElement.getAttribute("delayTime")));
-                    } else if ("fast".equals(type)) {
-                        syncfast = new ForumMMBaseSyncer(Integer.parseInt(syncerElement.getAttribute("sleepTime")), 50,
-                                                         Integer.parseInt(syncerElement.getAttribute("delayTime")));
-                    } else {
-                        log.warn("Unknown value for type attribute " + type);
-                    }
-                }
-                if (syncfast == null) syncfast = new ForumMMBaseSyncer(10 * 1000, 50, 500);
-                if (syncslow == null) syncslow = new ForumMMBaseSyncer(5 * 60 * 1000, 50, 2000);
-                log.service("Syncer for 'fast' objects: " + syncfast);
-                log.service("Syncer for 'slow' objects: " + syncslow);
-
+                // was 10 * 1000
+                syncfast = new ForumMMBaseSyncer(10 * 1000, 50, 500);
+                syncslow = new ForumMMBaseSyncer(5 * 60 * 1000, 50, 2000);
                 swapmanager = new ForumSwapManager(1 * 60 * 1000);
                 ForumEmailSender emailsender = new ForumEmailSender();
                 running = true;
             }
-	}
+        }
     }
 
     /**
      * Determine if the forumManager passed it's initilization
-     *
+     * 
      * @return <code>true</code> if the forumManager passed it's initilization, <code>false</code> if it isn't
      */
     public static boolean isRunning() {
@@ -129,7 +107,7 @@ public class ForumManager {
 
     /**
      * Get the number of forums in the cloud
-     *
+     * 
      * @return number of forums
      */
     public static int getForumsCount() {
@@ -138,61 +116,67 @@ public class ForumManager {
 
     /**
      * Get an enumeration of all the forums in the cloud
-     *
+     * 
      * @return all the forums
      */
-    public static Enumeration<Forum> getForums() {
-        return Collections.enumeration(forums.values());
+    public static Enumeration getForums() {
+        return forums.elements();
     }
 
     /**
      * Get a forum by it's MMBase node number
-     *
+     * 
      * @param id MMBase node number of the forum
      * @return forum
      */
     public static Forum getForum(int id) {
-        return forums.get(Integer.valueOf(id));
+        Forum f = (Forum) forums.get(new Integer(id));
+        if (f != null) {
+            return f;
+        }
+        return null;
     }
 
-
     public static Forum getForumByAlias(String key) {
-        for (Forum f : forums.values()) {
-            if (f.getAlias()!=null && key.indexOf(f.getAlias())!=-1) {
+        Enumeration e = forums.elements();
+        while (e.hasMoreElements()) {
+            Forum f = (Forum) e.nextElement();
+            if (f.getAlias() != null && key.indexOf(f.getAlias()) != -1) {
                 return f;
             }
         }
-       return null;
+        return null;
     }
 
-
     public static Forum getForumCloneMaster() {
-        for (Forum f : forums.values()) {
+        Enumeration e = forums.elements();
+        while (e.hasMoreElements()) {
+            Forum f = (Forum) e.nextElement();
             if (f.getCloneMaster()) {
                 return f;
             }
         }
         return null;
     }
-    
+
     /**
      * Remove a forum by it's MMBase node number
-     *
+     * 
      * @param id MMBase node number of the forum
      * @return <code>true</code> if the remove action was successful
      */
     public static boolean removeForum(int id) {
-        Forum f = forums.get(Integer.valueOf(id));
+        Forum f = (Forum) forums.get(new Integer(id));
         f.remove();
-        forumNameCache.remove(Integer.valueOf(id));
-        forums.remove(Integer.valueOf(id));
+        forumnamecache.remove(new Integer(id));
+        forums.remove(new Integer(id));
         return true;
     }
 
     /**
      * Get a forum by it's MMBase node number
-     *
-     * @param id  MMBase node number of the forum
+     * 
+     * @param id MMBase node number of the forum
      */
     public static Forum getForum(String id) {
         try {
@@ -200,13 +184,13 @@ public class ForumManager {
             return getForum(idi);
         } catch (Exception e) {
             // maybe its a alias ?
-            Integer nid = forumNameCache.get(id);
+            Integer nid = (Integer) forumnamecache.get(id);
             if (nid != null) {
                 return getForum(nid.intValue());
             } else {
                 org.mmbase.bridge.Node node = cloud.getNode(id);
                 if (node != null) {
-                    forumNameCache.put(id, Integer.valueOf(node.getNumber()));
+                    forumnamecache.put(id, new Integer(node.getNumber()));
                     return getForum(node.getNumber());
                 }
             }
@@ -215,8 +199,7 @@ public class ForumManager {
     }
 
     /**
-     * Called on init.
-     * Fill the forums hastable with all forums that are found in the cloud.
+     * Called on init. Fill the forums hastable with all forums that are found in the cloud.
      */
     private static void readForums() {
         NodeQuery query = forumnodemanager.createQuery();
@@ -227,13 +210,13 @@ public class ForumManager {
             Forum f = new Forum(n);
             f.setId(n.getNumber());
             f.setName(n.getStringValue("name"));
-            forums.put(Integer.valueOf(f.getId()), f);
+            forums.put(new Integer(f.getId()), f);
         }
     }
 
     /**
      * Create a new forum
-     *
+     * 
      * @param name Name of the new forum
      * @param language Language of the new forum
      * @param description Description of the new forum
@@ -258,18 +241,16 @@ public class ForumManager {
         f.setId(node.getNumber());
         f.setName(node.getStringValue("name"));
 
-        forums.put(Integer.valueOf(f.getId()), f);
+        forums.put(new Integer(f.getId()), f);
 
         Poster p = f.createPoster(account, password);
 
-	p.setEmail(email);
-	p.savePoster();
+        p.setEmail(email);
+        p.savePoster();
 
-
-
-	// check if we have a clone master
-	Forum cf = getForumCloneMaster();
-	if (cf != null) {
+        // check if we have a clone master
+        Forum cf = getForumCloneMaster();
+        if (cf != null) {
             // ok we have a clone master copy the wanted settings
             f.setPostingsPerPage(cf.getPostingsPerPage());
             f.setPostingsOverflowPostArea(cf.getPostingsOverflowPostArea());
@@ -284,21 +265,21 @@ public class ForumManager {
             f.setSpeedPostTime(cf.getSpeedPostTime());
             f.setReplyOnEachPage(cf.getReplyOnEachPage());
             f.save(); // some basic settings, weird
-            
+
             // check if we need to copy ProfileDefs
             Iterator i = cf.getProfileDefs();
-            if (i!=null) {
+            if (i != null) {
                 while (i.hasNext()) {
                     ProfileEntryDef pd = (ProfileEntryDef) i.next();
                     f.addProfileDef(pd);
                     if (pd.getName().equals("nick")) {
                         // kinda trick, we need a way to make forums.jsp optional for this *sigh*
-                        if (nick!=null && !nick.equals("")) p.setProfileValue("nick",nick);
+                        if (nick != null && !nick.equals("")) p.setProfileValue("nick", nick);
                     }
                 }
             }
             f.saveConfig();
-	}
+        }
         f.addAdministrator(p);
         return node.getNumber();
     }
@@ -317,47 +298,36 @@ public class ForumManager {
     }
 
     /**
-     * Remove the given deleted node from the sync queues
-     * ToDo: very ugly need to be beter
+     * Remove the given deleted node from the sync queues ToDo: very ugly need to be beter
      * @param node
      */
-     public static void nodeDeleted(org.mmbase.bridge.Node node) {
-         if (syncfast != null) {
-             log.debug("deleting node " + node.getNumber() + " from fast sync");
-             syncfast.nodeDeleted(node);
-             if (log.isDebugEnabled()) {
-                 log.debug("contents of queu: " + syncfast.printCurrentContent());
-             }
-         }
-         if (syncslow != null) {
-            log.debug("deleting node "+node.getNumber()+" from slow sync");
+    public static void nodeDeleted(org.mmbase.bridge.Node node) {
+        if (syncfast != null) {
+            syncfast.nodeDeleted(node);
+        }
+        if (syncslow != null) {
             syncslow.nodeDeleted(node);
-            if (log.isDebugEnabled()) {
-                 log.debug("contents of que: " + syncslow.printCurrentContent());
-            }
-         }
-     }
-
-
+        }
+    }
 
     /**
      * ToDo: Write docs!
      * @param id
      */
     protected static Map getNamePassword(String id) {
-	return config.getNamePassword(id);
+        return config.getNamePassword(id);
     }
 
     public static String getDefaultPassword() {
-	return config.getDefaultPassword();
+        return config.getDefaultPassword();
     }
 
     public static String getDefaultAccount() {
-	return config.getDefaultAccount();
+        return config.getDefaultAccount();
     }
 
     public static String getLanguage() {
-	return "en";
+        return "en";
     }
 
     /**
@@ -368,139 +338,134 @@ public class ForumManager {
         return cloud;
     }
 
-
     /**
-     * ToDo: Write docs!
-     * Called on init.
-     * reads configfile
+     * ToDo: Write docs! Called on init. reads configfile
      */
     public static void readConfig() {
-	try {
+        try {
             InputSource is = ResourceLoader.getConfigurationRoot().getInputSource("mmbob/mmbob.xml");
             DocumentReader reader = new DocumentReader(is, ForumManager.class);
             // decode forums
-            for (Element n : ForumsConfig.list(reader.getChildElements("mmbobconfig", "forums"))) {
-                // so it seems that you can configure more than one forum, but only the last one is
-                // actually used. (@id is ignored).
+            for (Iterator ns = reader.getChildElements("mmbobconfig", "forums"); ns.hasNext();) {
+                Element n = (Element) ns.next();
                 if (n != null) {
-                    config =  new ForumsConfig(reader, n);
+                    config = new ForumsConfig(reader, n);
                 }
             }
-	} catch (Exception e) {
+        } catch (Exception e) {
             log.error(e.getMessage(), e);
-	}
+        }
         if (config == null) {
             log.error("No correct mmbob.xml configuration found");
             config = new ForumsConfig();
         }
     }
 
-
     public static void saveConfig() {
-	log.info("SAVE CONFIG !");
- 	if (config != null) {
+        log.info("SAVE CONFIG !");
+        if (config != null) {
             config.save();
-	} else {
+        } else {
             log.info("missing config file, can't save");
-	}
+        }
     }
 
     /**
      * ToDo: Write docs!
      */
     public static void maintainMemoryCaches() {
-        for (Forum f : forums.values()) {
+        Enumeration e = forums.elements();
+        while (e.hasMoreElements()) {
             // for now all forums main nodes are loaded so
             // we just call them all for a maintain
+            Forum f = (Forum) e.nextElement();
             f.maintainMemoryCaches();
         }
     }
 
-   public static void setQuotaMax(String maxs) {
-	config.setQuotaMax(maxs);
-   }
+    public static void setQuotaMax(String maxs) {
+        config.setQuotaMax(maxs);
+    }
 
+    public static void setQuotaMax(int max) {
+        config.setQuotaMax(max);
+    }
 
-   public static void setQuotaMax(int max) {
-	config.setQuotaMax(max);
-   }
+    public static void setQuotaSoftWarning(String sws) {
+        config.setQuotaSoftWarning(sws);
+    }
 
-   public static void setQuotaSoftWarning(String sws) {
-	config.setQuotaSoftWarning(sws);
-   }
+    public static void setQuotaWarning(String ws) {
+        config.setQuotaWarning(ws);
+    }
 
+    public static int getQuotaMax() {
+        return config.getQuotaMax();
+    }
 
-   public static void setQuotaWarning(String ws) {
-	config.setQuotaWarning(ws);
-   }
+    public static int getQuotaSoftWarning() {
+        return config.getQuotaSoftWarning();
+    }
 
-   public static int getQuotaMax() {
-	return config.getQuotaMax();
-   }
+    public static int getQuotaWarning() {
+        return config.getQuotaWarning();
+    }
 
-   public static int getQuotaSoftWarning() {
-	return config.getQuotaSoftWarning();
-   }
+    public static ForumConfig getForumConfig(String name) {
+        return config.getForumConfig(name);
+    }
 
-   public static int getQuotaWarning() {
-	return config.getQuotaWarning();
-   }
+    public static String getAccountCreationType() {
+        return config.getAccountCreationType();
+    }
 
-   public static ForumConfig getForumConfig(String name) {
-	return config.getForumConfig(name);
-   }
+    public static String getAccountRemovalType() {
+        return config.getAccountRemovalType();
+    }
 
-   public static String getAccountCreationType() {
-       return config.getAccountCreationType();
-   }
+    public static String getLoginModeType() {
+        return config.getLoginModeType();
+    }
 
-   public static String getAccountRemovalType() {
-       return config.getAccountRemovalType();
-   }
+    public static String getLoginSystemType() {
+        return config.getLoginSystemType();
+    }
 
-   public static String getLoginModeType() {
-       return config.getLoginModeType();
-   }
+    public static void setLoginModeType(String mode) {
+        config.setLoginModeType(mode);
+    }
 
-   public static String getLoginSystemType() {
-       return config.getLoginSystemType();
-   }
+    public static void setLoginSystemType(String system) {
+        config.setLoginSystemType(system);
+    }
 
-   public static void setLoginModeType(String mode) {
-       config.setLoginModeType(mode);
-   }
+    public static String getLogoutModeType() {
+        return config.getLogoutModeType();
+    }
 
-   public static void setLoginSystemType(String system) {
-       config.setLoginSystemType(system);
-   }
+    public static void setLogoutModeType(String mode) {
+        config.setLogoutModeType(mode);
+    }
 
-   public static String getLogoutModeType() {
-       return config.getLogoutModeType();
-   }
+    public static String getGuestReadModeType() {
+        return config.getGuestReadModeType();
+    }
 
-   public static void setLogoutModeType(String mode) {
-       config.setLogoutModeType(mode);
-   }
+    public static String getThreadStartLevel() {
+        return config.getThreadStartLevel();
+    }
 
-   public static String getGuestReadModeType() {
-       return config.getGuestReadModeType();
-   }
+    public static void setGuestReadModeType(String mode) {
+        config.setGuestReadModeType(mode);
+    }
 
-   public static String getThreadStartLevel() {
-       return config.getThreadStartLevel();
-   }
+    public static String getGuestWriteModeType() {
+        return config.getGuestWriteModeType();
+    }
 
-   public static void setGuestReadModeType(String mode) {
-       config.setGuestReadModeType(mode);
-   }
-
-   public static String getGuestWriteModeType() {
-       return config.getGuestWriteModeType();
-   }
-
-   public static void setGuestWriteModeType(String mode) {
-       config.setGuestWriteModeType(mode);
-   }
+    public static void setGuestWriteModeType(String mode) {
+        config.setGuestWriteModeType(mode);
+    }
 
     public static int getPreloadChangedThreadsTime() {
         return config.getPreloadChangedThreadsTime();
@@ -514,7 +479,6 @@ public class ForumManager {
         return config.getXSLTPostingsOdd();
     }
 
-
     public static String getXSLTPostingsEven() {
         return config.getXSLTPostingsEven();
     }
@@ -523,33 +487,33 @@ public class ForumManager {
         return config.getAvatarsUploadEnabled();
     }
 
-   public static void setAvatarsUploadEnabled(String mode) {
-       config.setAvatarsUploadEnabled(mode);
-   }
+    public static void setAvatarsUploadEnabled(String mode) {
+        config.setAvatarsUploadEnabled(mode);
+    }
 
     public static String getAvatarsGalleryEnabled() {
         return config.getAvatarsGalleryEnabled();
     }
 
-   public static void setAvatarsGalleryEnabled(String mode) {
-       config.setAvatarsGalleryEnabled(mode);
-   }
+    public static void setAvatarsGalleryEnabled(String mode) {
+        config.setAvatarsGalleryEnabled(mode);
+    }
 
-   public static void setContactInfoEnabled(String mode) {
-       config.setContactInfoEnabled(mode);
-   }
+    public static void setContactInfoEnabled(String mode) {
+        config.setContactInfoEnabled(mode);
+    }
 
-   public static void setSmileysEnabled(String mode) {
-       config.setSmileysEnabled(mode);
-   }
+    public static void setSmileysEnabled(String mode) {
+        config.setSmileysEnabled(mode);
+    }
 
-   public static void setPrivateMessagesEnabled(String mode) {
-       config.setPrivateMessagesEnabled(mode);
-   }
+    public static void setPrivateMessagesEnabled(String mode) {
+        config.setPrivateMessagesEnabled(mode);
+    }
 
-   public static void setPostingsPerPage(String number) {
-       config.setPostingsPerPage(number);
-   }
+    public static void setPostingsPerPage(String number) {
+        config.setPostingsPerPage(number);
+    }
 
     public static String getContactInfoEnabled() {
         return config.getContactInfoEnabled();
@@ -585,110 +549,108 @@ public class ForumManager {
 
     public int getPostThreadLoadedCount() {
         int count = 0;
-        for (Forum forum : forums.values()) {
+        Enumeration i = forums.elements();
+        while (i.hasMoreElements()) {
+            Forum forum = (Forum) i.nextElement();
             count += forum.getPostThreadLoadedCount();
         }
         return count;
     }
 
-   public static String filterContent(String body) {
-        if (config.getFilterWords()!=null) {
-		return filterContent(config.getFilterWords(),body);
+    public static String filterContent(String body) {
+        if (config.getFilterWords() != null) {
+            return filterContent(config.getFilterWords(), body);
         } else {
-		return body;
-	}
-   }
+            return body;
+        }
+    }
 
-   public static HashMap getFilterWords() {
-        if (config.getFilterWords()!=null) {
-		return config.getFilterWords();
-	} else {
-		return null;
-	}
-   }
+    public static HashMap getFilterWords() {
+        if (config.getFilterWords() != null) {
+            return config.getFilterWords();
+        } else {
+            return null;
+        }
+    }
 
+    public static void addWordFilter(String name, String value) {
+        if (config.getFilterWords() != null) {
+            config.addWordFilter(name, value);
+        }
+    }
 
-   public static void addWordFilter(String name,String value) {
-        if (config.getFilterWords()!=null) {
-		config.addWordFilter(name,value);
-	}
-   }
+    public static void removeWordFilter(String name) {
+        if (config.getFilterWords() != null) {
+            config.removeWordFilter(name);
+        }
+    }
 
+    public static String longWordWrap(String body) {
+        StringTokenizer tok = new StringTokenizer(body, " \n\r\t", true);
+        String newbody = "";
+        while (tok.hasMoreTokens()) {
+            String tmp = tok.nextToken();
+            int len = tmp.length();
+            boolean first = true;
+            if (len > 45) {
+                while (len > 45) {
+                    if (first) {
+                        newbody = newbody + tmp.substring(0, 44);
+                        first = false;
+                    } else {
+                        newbody = newbody + "- " + tmp.substring(0, 44);
+                    }
+                    log.info("newbody=" + newbody);
+                    tmp = tmp.substring(45);
+                    log.info("tmp=" + tmp);
+                    len = tmp.length();
+                }
+                newbody = newbody + "- " + tmp;
+            } else {
+                newbody = newbody + tmp;
+            }
+        }
+        return newbody;
+    }
 
-   public static void removeWordFilter(String name) {
-        if (config.getFilterWords()!=null) {
-		config.removeWordFilter(name);
-	}
-   }
+    public static String filterContent(HashMap words, String body) {
+        body = longWordWrap(body);
+        StringObject obj = new StringObject(body);
+        if (words != null) {
+            Iterator i = words.keySet().iterator();
+            while (i.hasNext()) {
+                String key = (String) i.next();
+                String value = (String) words.get(key);
+                obj.replace(key, value);
+            }
+            return obj.toString();
+        } else {
+            return body;
+        }
+    }
 
+    public static int getSpeedPostTime() {
+        return config.getSpeedPostTime();
+    }
 
-   public static String longWordWrap(String body) {
-	StringTokenizer tok = new StringTokenizer(body," \n\r\t",true);
-	String newbody = "";
-	while (tok.hasMoreTokens()) {
-		String tmp = tok.nextToken();
-		int len = tmp.length();
-		boolean first = true;
-		if (len>45) {
-			while (len>45) {
-				if (first) {
-					newbody = newbody + tmp.substring(0,44);
-					first = false;
-				} else {
-					newbody = newbody + "- "+tmp.substring(0,44);
-				}
-				log.info("newbody="+newbody);
-				tmp = tmp.substring(45);
-				log.info("tmp="+tmp);
-				len=tmp.length();
-			}
-			newbody = newbody + "- "+tmp;
-		} else {
-			newbody = newbody+tmp;
-		}
-	}
-	return newbody;
-   }
+    public static int getPostingsOverflowPostArea() {
+        return config.getPostingsOverflowPostArea();
+    }
 
-   public static String filterContent(Map<String, String> words, String body) {
-       body = longWordWrap(body);
-       StringObject obj = new StringObject(body);
-       if (words != null) {
-           // should iterator over _entrySet_ !
-           Iterator<String> i = words.keySet().iterator();
-           while (i.hasNext()) {
-               String key = i.next();
-               String value = words.get(key);
-               obj.replace(key, value);
-           }
-           return obj.toString();
-       } else {
-           return body;
-       }
-   }
+    public static int getPostingsOverflowThreadPage() {
+        return config.getPostingsOverflowThreadPage();
+    }
 
-   public static int getSpeedPostTime() {
-	return config.getSpeedPostTime();
-   }
+    public static String getEmailtext(String role) {
+        return config.getEmailtext(role);
+    }
 
-   public static int getPostingsOverflowPostArea() {
-	return config.getPostingsOverflowPostArea();
-   }
+    public static String getExternalRootUrl() {
+        return config.getExternalRootUrl();
+    }
 
-   public static int getPostingsOverflowThreadPage() {
-	return config.getPostingsOverflowThreadPage();
-   }
-
-   public static String getEmailtext(String role) {
-	return config.getEmailtext(role);
-   }
-
-   public static String getExternalRootUrl() {
-	return config.getExternalRootUrl();
-   }
-
-   public static boolean getReplyOnEachPage() {
-	return config.getReplyOnEachPage();
-   }
+    public static boolean getReplyOnEachPage() {
+        return config.getReplyOnEachPage();
+    }
 
 }
